Bug #41037 Maria: recovery failure (pushbuild2)
Submitted: 25 Nov 2008 22:31 Modified: 8 Jan 2009 10:46
Reporter: Guilhem Bichot Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server: Maria storage engine Severity:S3 (Non-critical)
Version:5.1-maria OS:Any
Assigned to: Guilhem Bichot CPU Architecture:Any

[25 Nov 2008 22:31] Guilhem Bichot
Description:
# 11:34:11 Sending SIGKILL to mysqld with pid 12282 in order to force a recovery.
# 11:34:23 Attempting database recovery...
# 11:34:28 081125 11:34:28 [Note] mysqld: Maria engine: starting recovery
# 11:34:28 recovered pages: 0% 14% 25% 42% 53% 66% 77% 88% 99% 100% (0.1 seconds); transactions to roll back: 1
# 11:34:28 Got error 126 when executing undo undo_key_insert
# 11:34:28 081125 11:34:28 [ERROR] mysqld: Maria engine: Undo phase failed

How to repeat:
Time-dependent.

Suggested fix:
I have downloaded the Maria logs.
[5 Dec 2008 22:28] Guilhem Bichot
queued to 5.1-maria
[15 Dec 2008 10:08] Bugs System
Pushed into 6.0.9-alpha  (revid:guilhem@mysql.com-20081205211146-all6bgsmp0b2xc3f) (version source revid:guilhem@mysql.com-20081213204800-0nubni3t4ihn4hv9) (pib:5)
[8 Jan 2009 10:46] MC Brown
Test case failure. No documentation needed.